<resources>
    <string name="app_name">简约-记账笔记</string>
    <string name="editOne">记一笔..</string>
    <string name="month_out">本月支出</string>
    <string name="out">支出</string>
    <string name="month_in">本月收入</string>
    <string name="in">收入</string>
    <string name="budget">本月剩余</string>
    <string name="see_excel">表格查询分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备 注</string>
    <string name="cancel">取 消</string>
    <string name="set_money">设置预算</string>
    <string name="ensure">确 定</string>
    <string name="date_empty">数据为空，无此类记录</string>
    <string name="please_input_time">请输入时间</string>
    <string name="please_search">搜 索</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="clear_all">清除所有缓存数据！</string>
    <string name="history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="shareSoft">软件分享</string>
    <string name="history_month_record">本月账单记录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
