<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/grey_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_bg">
        <Button
            android:id="@+id/dialog_more_btn_about"
            style="@style/dialogBtnMoreStyle"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/about"/>
        <Button
            android:id="@+id/dialog_more_btn_setting"
            style="@style/dialogBtnMoreStyle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableTop="@mipmap/it_shezhi"
            android:text="@string/setting"/>
        <Button
            android:id="@+id/dialog_more_btn_record"
            style="@style/dialogBtnMoreStyle"
            android:drawableTop="@mipmap/it_jilu"
            android:text="@string/history_record"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:background="@color/grey_bg">
        <Button
            android:id="@+id/dialog_more_btn_info"
            style="@style/dialogBtnMoreStyle"
            android:layout_marginRight="30dp"
            android:drawableTop="@mipmap/it_xiqing"
            android:text="@string/account_info"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_more_cancel"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ih_error"
        android:layout_gravity="center"/>

</LinearLayout>