<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dialog_beizhu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_remark"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/dialog_beizhu_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_beizhu_tv"
        android:hint="@string/remark"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="14sp">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_beizhu_et"
        android:padding="10dp"
        >
        <Button
            android:id="@+id/dialog_beizhu_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/green_008000"
            android:text="@string/cancel"
            android:background="@drawable/dialog_cancel_bg"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/dialog_beizhu_btn_sure"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:text="@string/ensure"
            android:background="@drawable/dialog_sure_bg"
            />
    </LinearLayout>


</RelativeLayout>