<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:padding="10dp"
    android:background="@drawable/shape_radius"
    android:layout_height="wrap_content">
    <DatePicker
        android:id="@+id/dialog_time_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:text="@string/please_input_time"
        android:textSize="16sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:id="@+id/dialog_time_et_hour"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="center_horizontal"
            android:maxLength="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/dialog_time_et_minute"
            android:layout_width="80dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_time_btn_cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/green_008000"
            android:background="@null"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/dialog_time_btn_ensure"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/ensure"
            android:textColor="@color/green_008000"
            android:background="@null"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
        

</LinearLayout>