<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_bg"
    tools:context=".mActivity.MonthChartActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey_d4d4d4"
        android:padding="10dp">

        <ImageView
            android:id="@+id/chart_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"
            android:src="@mipmap/it_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_info"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/chart_iv_rili"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/it_rili"
            android:onClick="onClick"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/chart_tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2020年11月账单"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/chart_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共1笔支出, ￥23.0"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/chart_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共2笔收入, ￥113.0"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/chart_btn_out"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/out"
            android:textStyle="bold"
            android:onClick="onClick"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            android:background="@drawable/chart_btn_out_bg"/>
        <Button
            android:id="@+id/chart_btn_in"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/in"
            android:textStyle="bold"
            android:onClick="onClick"
            android:textColor="@color/white"
            android:background="@drawable/chart_btn_in_bg"/>
    </LinearLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/chart_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>